[gd_scene load_steps=20 format=3 uid="uid://bl0spk6gymtey"]

[ext_resource type="Script" uid="uid://dhopvrh0xvdq4" path="res://entities/enemies/simple_enemy/enemy.gd" id="1_njwkq"]
[ext_resource type="PackedScene" uid="uid://dbb54nr1beapg" path="res://entities/health_drop/health_drop.tscn" id="2_a7cha"]
[ext_resource type="Material" uid="uid://c4jt1g0a3cha4" path="res://entities/enemies/simple_enemy/EnemyMat.tres" id="3_y5ov6"]
[ext_resource type="Texture2D" uid="uid://b3w7i1ds7agwm" path="res://assets/bunny3.png" id="4_5amuy"]
[ext_resource type="PackedScene" uid="uid://ctqbx520r1gsq" path="res://commons/attackbox/attackbox_component.tscn" id="5_giivv"]
[ext_resource type="Texture2D" uid="uid://bsx2ey1cfeen6" path="res://assets/smoke2.png" id="5_y5ov6"]
[ext_resource type="Script" uid="uid://d2ssuuarj6kcv" path="res://commons/hitbox/hitbox_component.gd" id="6_w2m6y"]
[ext_resource type="Script" uid="uid://ck82pbmrvnc4n" path="res://entities/enemies/simple_enemy/enemy_animation.gd" id="7_geunl"]
[ext_resource type="Script" uid="uid://bfgcawdmt8vox" path="res://entities/enemies/simple_enemy/follow_player.gd" id="8_uwalc"]
[ext_resource type="Script" uid="uid://cl5g6pwsy7x6j" path="res://entities/enemies/simple_enemy/simple_attacking.gd" id="9_a3kex"]
[ext_resource type="Script" uid="uid://ctvcfg16g1pkt" path="res://commons/health/health_component.gd" id="10_j7mwk"]
[ext_resource type="AnimationLibrary" uid="uid://damhsvgmw0ya1" path="res://entities/enemies/enemy_anim_lib.res" id="11_a7cha"]
[ext_resource type="Script" uid="uid://vgywicirnymn" path="res://entities/enemies/simple_enemy/enemy_flash_white_when_hit.gd" id="11_bi11h"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oxdrg"]
radius = 18.0
height = 58.0

[sub_resource type="CircleShape2D" id="CircleShape2D_paah2"]
radius = 40.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ae7xc"]
size = Vector2(64, 64)

[sub_resource type="Animation" id="Animation_ney62"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_w7mge"]
resource_name = "FlashWhite"
length = 0.1
step = 0.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(0.5, 5.46416, 0.5),
"update": 0,
"values": [0.0, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ney62"]
_data = {
&"RESET": SubResource("Animation_ney62"),
&"flash_white": SubResource("Animation_w7mge")
}

[node name="Enemy" type="CharacterBody2D" node_paths=PackedStringArray("nodes_to_dissable") groups=["enemy"]]
collision_layer = 2
collision_mask = 3
motion_mode = 1
script = ExtResource("1_njwkq")
health_pickup_instance = ExtResource("2_a7cha")
chance_to_drop_health = 0.05
nodes_to_dissable = [NodePath("SimpleAttacking"), NodePath("FollowPlayer")]

[node name="EnemySprite" type="Sprite2D" parent="."]
y_sort_enabled = true
material = ExtResource("3_y5ov6")
position = Vector2(-3, -1)
scale = Vector2(0.075, 0.075)
texture = ExtResource("4_5amuy")
offset = Vector2(10.2041, -112.245)

[node name="Smoke" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.014, 0.014)
texture = ExtResource("5_y5ov6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 5)
rotation = 1.57079
shape = SubResource("CapsuleShape2D_oxdrg")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="AttackboxComponent" parent="." instance=ExtResource("5_giivv")]
damage = 10
is_damage_by_itself = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackboxComponent"]
shape = SubResource("CircleShape2D_paah2")
debug_color = Color(0.790018, 0.13228, 0.272505, 0.42)

[node name="HitboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health")]
script = ExtResource("6_w2m6y")
health = NodePath("../HealthComponent")
metadata/_custom_type_script = "uid://d2ssuuarj6kcv"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("RectangleShape2D_ae7xc")
debug_color = Color(0.0417786, 0.650393, 0, 0.42)

[node name="EnemyAnimation" type="Node2D" parent="." node_paths=PackedStringArray("enemy_sprite")]
script = ExtResource("7_geunl")
enemy_sprite = NodePath("../EnemySprite")

[node name="FollowPlayer" type="Node" parent="."]
script = ExtResource("8_uwalc")
speed = 220

[node name="SimpleAttacking" type="Node" parent="." node_paths=PackedStringArray("attackbox", "attackbox_col")]
script = ExtResource("9_a3kex")
attackbox = NodePath("../AttackboxComponent")
attackbox_col = NodePath("../AttackboxComponent/CollisionShape2D")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("10_j7mwk")
max_health = 50
metadata/_custom_type_script = "uid://ctvcfg16g1pkt"

[node name="EnemyAnimPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"enemy_anim_lib": ExtResource("11_a7cha")
}

[node name="EnemyFlashWhiteWhenHit" type="Node" parent="." node_paths=PackedStringArray("flash_white_player")]
script = ExtResource("11_bi11h")
flash_white_player = NodePath("../FlashWhitePlayer")

[node name="FlashWhitePlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ney62")
}

[connection signal="health_reached_zero" from="HealthComponent" to="." method="_on_health_component_health_reached_zero"]
[connection signal="hurted" from="HealthComponent" to="FollowPlayer" method="_on_health_component_hurted"]
[connection signal="hurted" from="HealthComponent" to="EnemyFlashWhiteWhenHit" method="flash_white"]
